--- a/calc/teploizoliacia_form.html
+++ b/calc/teploizoliacia_form.html
@@ -12,7 +12,7 @@
    </head>
    <body>
       <div class="teploizol_form_main">
-         <button class="accordion" id="accordion1"><i class="su_icon-home-roof" onclick="chpok1('this')"></i>Расчёт теплоизоляционных материалов для кровли</button>
+         <button class="accordion" id="accordion1"><i class="su_icon-home-roof"></i>Расчёт теплоизоляционных материалов для кровли</button>
          <div class="panel" id="panel1">
             <section class="roof">
                <!--<h2 class="roof_title__h2">Расчёт теплоизоляционных материалов для кровли</h2>-->
@@ -1072,7 +1072,7 @@
                                  <div class="input_label__groups_item-wrp input__groups_item-wrp">
                                     <div class="input_label__groups-wrp">
                                        <div class="input_label-wrp input_label2-wrp">
-                                          <label class="input_label">Длина(L1), м</label>
+                                          <label class="input_label">Длина, м</label>
                                           <div class="inputWithIcon inputIconBg">
                                              <input class="filter_data perekrit_stone__length input-style" type="number"
                                                 name="data[Бетонные перекрития][0][Длина]" step="0.0001" min="0"
@@ -1083,7 +1083,7 @@
                                        </div>
                                        <div class="input_label-wrp input_label2-wrp">
                                           <label class="input_label">
-                                          Ширина(L2), м </label>
+                                          Ширина, м </label>
                                           <div class="inputWithIcon inputIconBg">
                                              <input class="filter_data perekrit_stone__width input-style" type="number"
                                                 name="data[Бетонные перекрития][0][Ширина]" step="0.0001" min="0"
@@ -1142,7 +1142,7 @@
                            </label>
                         </div>
                      </div>
-                     <!-- Начало полей для Фундамент "Плита" -->
+                     <!-- Начало полей для Фундамент "Лента" -->
                      <div class="fundam_lenta_wrp hidden" id="fundam_lenta_wrp">
                         <form action="#" class="fundam_lenta__form" id="fundam_lenta__form-id"
                            name="fundam_lenta__form-id">
